[package]
name = "daily-time-keeper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0"
time = {version = "0.3.5", features = ["std", "local-offset"]}
serde = {version = "1.0.136", features = ["derive"]}
toml = "0.5.8"
