[package]
name = "daily-time-keeper"
version = "0.1.0"
edition = "2021"
description = "A tool to help with time keeping and hour calculation"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
time = {version = "0.3.5", features = ["std", "local-offset"]}
serde = {version = "1.0.136", features = ["derive"]}
toml = "0.5.8"
bevy_ecs = "0.8.1"
